--- a/views/account.tt
+++ b/views/account.tt
@@ -1,23 +1,47 @@
-<h2>Graphs</h2>
-<div class="row">
-    <div class="col-md-6">
-        <p>Use this page to configure what graphs are displayed on your home page. New
-        graphs can only be added by an administrator.</p>
-        <form role="form" method="post">
-            <div class="row">
-                <div class="col-md-6">
-                    [% FOREACH graph IN data.graphs %]
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" name="graphs" value="[% graph.id %]"
-                                    [% IF graph.selected %]checked[% END %]
-                                >[% graph.title %]
-                            </label>
-                        </div>
-                    [% END %]
+[% IF action == "detail" %]
+    <h2>Account details</h2>
+    <div class="row">
+        <div class="col-md-6">
+            <form role="form" method="post">
+                <div class="row">
+                    <div class="col-md-6">
+                        [% FOREACH graph IN data.graphs %]
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="graphs" value="[% graph.id %]"
+                                        [% IF graph.selected %]checked[% END %]
+                                    >[% graph.title %]
+                                </label>
+                            </div>
+                        [% END %]
+                    </div>
                 </div>
-            </div>
-            <button type="submit" id="submit" name="graphsubmit" value="submit" class="btn btn-primary">Save</button>
-        </form>
+                <button type="submit" id="submit" name="graphsubmit" value="submit" class="btn btn-primary">Save</button>
+            </form>
+        </div>
     </div>
-</div>
+[% ELSE %]
+    <h2>Graphs</h2>
+    <div class="row">
+        <div class="col-md-6">
+            <p>Use this page to configure what graphs are displayed on your home page. New
+            graphs can only be added by an administrator.</p>
+            <form role="form" method="post">
+                <div class="row">
+                    <div class="col-md-6">
+                        [% FOREACH graph IN data.graphs %]
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox" name="graphs" value="[% graph.id %]"
+                                        [% IF graph.selected %]checked[% END %]
+                                    >[% graph.title %]
+                                </label>
+                            </div>
+                        [% END %]
+                    </div>
+                </div>
+                <button type="submit" id="submit" name="graphsubmit" value="submit" class="btn btn-primary">Save</button>
+            </form>
+        </div>
+    </div>
+[% END %]
