--- a/views/layouts/main.tt
+++ b/views/layouts/main.tt
@@ -68,7 +68,7 @@
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">[% user.firstname %]<b class="caret"></b></a>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">[% user.value %]<b class="caret"></b></a>
                                 <ul class="dropdown-menu">
                                     <!--
                                     <li><a href="#">Action</a></li>
