--- a/views/user.tt
+++ b/views/user.tt
@@ -25,7 +25,12 @@
                 <input type="text" class="form-control" id="email" name="email" value="[% edituser.email %]">
             </div>
             <div class="form-group">
-                <label for="title">Title: (<a data-toggle="modal" data-target="#newtitle" href="">new</a>)</label>
+                <label for="title">
+                    Title:
+                    [% IF page == "user" %]
+                        (<a data-toggle="modal" data-target="#newtitle" href="">new</a>)
+                    [% END %]
+                </label>
                 <select class="form-control" id="title" name="title">
                     [% UNLESS edituser.title.id %]
                         <option></option>
@@ -36,7 +41,12 @@
                 </select>
             </div>
             <div class="form-group">
-                <label for="organisation">Organisation: (<a data-toggle="modal" data-target="#neworganisation" href="">new</a>)</label>
+                <label for="organisation">
+                    Organisation:
+                    [% IF page == "user" %]
+                        (<a data-toggle="modal" data-target="#neworganisation" href="">new</a>)
+                    [% END %]
+                </label>
                 <select class="form-control" id="organisation" name="organisation">
                     [% UNLESS edituser.organisation.id %]
                         <option></option>
