--- a/views/login.tt
+++ b/views/login.tt
@@ -33,7 +33,7 @@
                                 <input type="submit" class="btn btn-lg btn-success btn-block" value="Sign In">
                             </div>
                             <div class="col-xs-6 col-sm-6 col-md-6">
-                                <a href="" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Register</a>
+                                <a href="" class="btn btn-lg btn-primary btn-block" data-toggle="modal" data-target="#modalregister">Request account</a>
                             </div>
                         </div>
                     </fieldset>
