--- a/views/user.tt
+++ b/views/user.tt
@@ -28,7 +28,7 @@
                 <label for="title">
                     Title:
                     [% IF page == "user" %]
-                        (<a data-toggle="modal" data-target="#newtitle" href="">new</a>)
+                        (<a data-toggle="modal" data-target="#newtitle" href="">create</a>)
                     [% END %]
                 </label>
                 <select class="form-control" id="title" name="title">
@@ -44,7 +44,7 @@
                 <label for="organisation">
                     Organisation:
                     [% IF page == "user" %]
-                        (<a data-toggle="modal" data-target="#neworganisation" href="">new</a>)
+                        (<a data-toggle="modal" data-target="#neworganisation" href="">create</a>)
                     [% END %]
                 </label>
                 <select class="form-control" id="organisation" name="organisation">
