--- a/views/view.tt
+++ b/views/view.tt
@@ -66,7 +66,7 @@
                 <div class="filter-add">
                         <div class="col-md-11">
                             <button type="button" class="btn btn-default add">
-                                Add
+                                Add new filter
                             </button>
                         </div>
                 </div>
