--- a/views/view.tt
+++ b/views/view.tt
@@ -47,8 +47,8 @@
                 [% END %]
                 <dt>Filters</dt>
                 <dd>Filters can be used to selectively display only some rows of data. Several
-                    filters can be applied to one view
-                    to further limit the data displayed: for example, 2 date filters can be used to
+                    filters can be applied to one view, in which case data will only be displayed
+                    that meets the criteria of all the filters. For example, 2 date filters can be used to
                     only show data between 2 dates. Any dates entered must be specified in the
                     form yyyy-m-dd.
                     [% IF user.permissions.admin %]
