--- a/views/edit.tt
+++ b/views/edit.tt
@@ -102,8 +102,18 @@
                     <label for="[% col.id %]">
                         [% label %][% IF oldvalue %] (previously &quot;[% oldvalue %]&quot;)[% END %]
                     </label>
-                    <input type="text" class="form-control [% IF col.type == "date" %]datepicker[% END %]" id="[% col.id %]"
-                        name="[% field %]" value="[% IF record %][% value %][% END %]" [% readonly %] >
+                    [% IF col.type == "date" || col.type == "daterange" %]
+                        [% class = "form-control datepicker" %]
+                    [% ELSE %]
+                        [% class = "form-control" %]
+                    [% END %]
+                    [% IF col.type == "daterange" %]
+                        [% opts = 'data-date-multidate="2" data-date-multidate-separator=" to "' %]
+                    [% ELSE %]
+                        [% opts = "" %]
+                    [% END %]
+                    <input type="text" class="[% class %]" id="[% col.id %]"
+                        name="[% field %]" value="[% IF record %][% value %][% END %]" [% opts %] [% readonly %] >
                 [% END %]
                 </div>
             [% END %]
